# combat-salvo

./: .gitignore  README.md  hetrogeneous_salvo_data_input_tool.xlsx  hetrogenous_salvo_read_data.py  homogeneous_salvo_model.py  pyproject.toml  requirements.txt
hetrogeneous_salvo_model/: hetrogeneous_salvo_data_input_tool.xlsx  hetrogeneous_salvo_model.py  hetrogenous_salvo_read_data.py
hetrogeneous_salvo_model/data/: hetrogeneous_salvo_data_input_tool_v2.xlsx  hetrogeneous_salvo_data_input_tool_v3.xlsx
hetrogeneous_salvo_model/references/: salvo_example.R
hetrogenous_salvo_model/: hetrogeneous_salvo_model.py
homogeneous_salvo_model/: homogeneous_salvo_model.py
src/hetrogeneous_salvo_model/: battleGroup.py  engagement.py  hetrogeneous_salvo_model.py  main.py  targetAllocationSolver.py  unit.py
src/hetrogeneous_salvo_model/data/: hetrogeneous_salvo_data_input_tool_v3.xlsx  hetrogeneous_salvo_data_input_tool_v4.xlsx
src/hetrogeneous_salvo_model/utils/: __init__.py  hetrogenous_salvo_read_data.py
src/homogeneous_salvo_model/: doe_results.csv  doe_tools.py  homogeneous_salvo_model.py
src/homogeneous_salvo_model/data/: doe_input.csv
